# SlopeInit

./: CMakeLists.txt  InputParser.c  README.md  SlopeGeometry.c  SlopeGeometry.h  main.cpp  postprocess.inp
postprocess/: CMakeLists.txt  CheckPoint.cpp  CheckPoint.h  reset_checkpoint.cpp
src/: CMakeLists.txt  InputParser.c  InputParser.h  SlopeGeometry.c  SlopeGeometry.h  SlopeSlove.cpp  SlopeSlove.h  eos_cpp.cpp  eos_cpp.h  eos_state.c  eos_state.h  main.cpp  slopesolve.cpp  slopesolve.h
